--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#Features">Features</a></li>
                 <!-- <li><a href="">Integration</a></li> -->
-                <li><a href="">Clients</a></li>
+                <li><a href="client.html" target="_blank">Clients</a></li>
                 <li><a href="">Testimonials</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="contact.html" target="_blank">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -31,8 +31,13 @@
 
     <section class="first-section">
         <div class="first-container">
-            <h1>The Quicker, Better, Smarter Expense Management Tool</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sunt quisquam quis ut fugit, quod dicta exercitationem amet est ab aliquam delectus nulla sed similique distinctio, magnam aspernatur cupiditate et tempora? Deserunt, autem ad!</p>
+            <h1>Welcome to Kozo: The Quicker, Better, Smarter Expense Management Tool
+                Streamline Your Finances with Ease</h1>
+            <p>
+                Managing expenses just got a whole lot simpler with Kozo, your go-to solution for efficient and
+                intelligent expense management. We understand the challenges businesses face when it comes to tracking,
+                approving, and reporting expenses. That's why we've developed Kozo – the tool that revolutionizes the
+                way you handle your finances.</p>
         </div>
         <div class="first-container">
             <img src="banner.png" alt="banner">
@@ -46,7 +51,7 @@
         <!-- First Subsection  -->
 
         <section class="subsection1">
-            <h1>Top Features</h1>
+            <h1>Key Features</h1>
         </section>
 
         <!-- Second subsection   -->
@@ -55,11 +60,15 @@
             <div class="container">
                 <div class="container13items">
                     <div class="textleft">
-                        <p><b>Budget Multiple Projects</b></p>
+                        <p><b>1. Quick and Intuitive Interface:
+                            </b>
+                        </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Quick and Intuitive Interface:
+                            Say goodbye to tedious, time-consuming expense tracking. Kozo offers a user-friendly
+                            interface that allows you to effortlessly log and categorize expenses in a matter of
+                            seconds.
+
                         </p>
                     </div>
                     <div class="img">
@@ -68,11 +77,11 @@
                 </div>
                 <div class="container13items">
                     <div class="textleft">
-                        <p><b>Invoice Scan & auto-report</b></p>
+                        <p><b>2.Invoice Scan & auto-report</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Kozo is more than just an expense tracker; it's your virtual financial assistant. With smart
+                            automation features, it learns from your spending patterns and suggests categorizations,
+                            automates approvals, and even provides insightful reports to guide your financial.
                         </p>
                     </div>
                     <div class="img">
@@ -83,11 +92,12 @@
                 <div class="container13items">
 
                     <div class="textleft">
-                        <p><b>Inventory Tracker</b></p>
+                        <p><br><br><b>3.Inventory Tracker</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Collaboration is key to success, and Kozo facilitates seamless teamwork. Whether you're
+                            working with a team in the same office or spread across the globe, our real-time
+                            collaboration features ensure everyone stays on the same page, making expense management a
+                            collaborative and efficient process.
                         </p>
                     </div>
                     <div class="img">
@@ -98,11 +108,11 @@
                 <div class="container13items">
 
                     <div class="textleft">
-                        <p><b>Approval System with Levels</b></p>
+                        <p><br><br><br><b>4.Approval System with Levels</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Trust is paramount when it comes to financial tools. Kozo takes security seriously,
+                            employing state-of-the-art encryption and compliance measures to protect your sensitive
+                            financial data. Rest easy knowing your information is in safe hands
                         </p>
                     </div>
                     <div class="img">
@@ -118,11 +128,11 @@
                         <img src="5.png" alt="">
                     </div>
                     <div class="textright">
-                        <p><b>Assign Project Members</b></p>
+                        <p><b>5.Assign Project Members</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Make informed decisions with Kozo's customizable reporting tools. Tailor reports to suit
+                            your specific needs, analyze spending trends, and gain valuable insights into your financial
+                            landscape. With Kozo, data-driven decision-making becomes a breeze.
                         </p>
                     </div>
 
@@ -132,11 +142,10 @@
                         <img src="6.png" alt="">
                     </div>
                     <div class="textright">
-                        <p><b>Dashboard</b></p>
+                        <p><b>6.Dashboard</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Kozo takes the hassle out of manual data entry with its advanced receipt scanning and
+                            Optical Character Recognition (OCR) technology. Simply snap a photo of your receipts,
                         </p>
                     </div>
                 </div>
@@ -145,11 +154,10 @@
                         <img src="7.png" alt="">
                     </div>
                     <div class="textright">
-                        <p><b>Duplicates Detector</b></p>
+                        <p><b>7.Duplicates Detector</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            Stay on top of your spending with Kozo's budget tracking feature. Set spending limits for
+                            different categories, and receive real-time alerts when you approach or exceed your budget.
                         </p>
                     </div>
                 </div>
@@ -158,11 +166,10 @@
                         <img src="8.png" alt="">
                     </div>
                     <div class="textright">
-                        <p><b>Integration with 3rd Party Tools</b></p>
+                        <p><b>8.Integration with 3rd Party Tools</b></p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quos ab, commodi nihil
-                            odit
-                            accusantium delectus doloribus id
+                            For businesses operating globally, Kozo's multi-currency support ensures accurate tracking
+                            of expenses in various currencies.
                         </p>
                     </div>
                 </div>
@@ -187,24 +194,24 @@
                 <p><b>Billy J. Olds</b></p>
                 <p>TCC Inc.</p>
                 <img src="Stars2.jpg" alt="">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam exercitationem porro dicta eligendi
-                    natus magnam necessitatibus dignissimos reprehenderit in? Exercitationem.</p>
+                <p>As a busy entrepreneur, Kozo has been a lifesaver. Its quick interface and smart automation have
+                    drastically reduced the time I spend on expense management. </p>
             </div>
             <div class="third-container">
                 <img src="prof2.png" alt="">
-                <p><b>Billy J. Olds</b></p>
+                <p><b>Harshad R Mehta</b></p>
                 <p>TCC Inc.</p>
                 <img src="Stars2.jpg" alt="">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam exercitationem porro dicta eligendi
-                    natus magnam necessitatibus dignissimos reprehenderit in? Exercitationem.</p>
+                <p>I've tried various expense tools, but Kozo is a standout. The simplicity of use coupled with powerful
+                    automation features makes it a winner. </p>
             </div>
             <div class="third-container">
                 <img src="prof3.png" alt="">
-                <p><b>Billy J. Olds</b></p>
+                <p><b>Sthephan J Billings</b></p>
                 <p>TCC Inc.</p>
                 <img src="Stars2.jpg" alt="">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam exercitationem porro dicta eligendi
-                    natus magnam necessitatibus dignissimos reprehenderit in? Exercitationem.</p>
+                <p>Kozo has made tracking expenses a breeze for our company. The customizable reporting helps us analyze
+                    spending patterns effectively, and the secure environment </p>
             </div>
         </section>
     </section>
@@ -215,7 +222,7 @@
         <div>
             <div>
                 <img src="mail.png" alt="">
-                <p>hello@gokozo.com</p>
+                <p>hello21@gokozo.com</p>
             </div>
             <div>
                 <img src="call.png" alt="">
